# wally-ai-training

./: .gitignore  Makefile  README.md  pyproject.toml
.cursor/rules/: wally-ai-search.mdc
configs/: dataset.yaml  dataset_tiles.yaml  inference.yaml  inference_tiled.yaml  training.yaml  training_tiles.yaml
data/datasets/wally/labels/: train.cache  val.cache
data/datasets/wally/labels/test/: hey_waldo_1.txt  hey_waldo_4.txt  (+1 more)
data/datasets/wally_tiles/labels/: train.cache  val.cache
data/raw/wally_tiles/: import_manifest.txt
runs/: wally_dataset.yaml
runs/detect/runs/wally_train/: args.yaml  results.csv
runs/detect/runs/wally_train-2/: args.yaml  results.csv
scripts/: import_hey_waldo.py  setup_dirs.sh
src/wally_ai_search/: __init__.py
src/wally_ai_search/cli/: __init__.py  main.py
src/wally_ai_search/config/: __init__.py  paths.py  settings.py
src/wally_ai_search/data/: __init__.py  annotations.py  augmentation.py  dataset.py  hey_waldo_import.py  split.py  validation.py  waldo_tiles_import.py
src/wally_ai_search/models/: __init__.py  evaluator.py  predictor.py  trainer.py  yolo_model.py
src/wally_ai_search/pipelines/: __init__.py  evaluate_pipeline.py  predict_pipeline.py  tiled_predict_pipeline.py  train_pipeline.py
src/wally_ai_search/services/: __init__.py  detection_service.py  image_service.py
src/wally_ai_search/utils/: __init__.py  image_utils.py  logger.py  metrics.py  tiled_inference.py
tests/: test_dataset.py  test_hey_waldo_import.py  test_paths.py  test_settings.py  test_tiled_inference.py  test_waldo_tiles_import.py
(+14 files in other folders)
