[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wally-ai-search"
version = "0.1.0"
description = "Train, evaluate, and run YOLO models for Wally character detection"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Legitimuz" }]
dependencies = [
    "torch>=2.0.0",
    "ultralytics>=8.0.0",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.0",
    "loguru>=0.7.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
wally-ai = "wally_ai_search.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/wally_ai_search"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
packages = ["wally_ai_search"]

[tool.mypy.overrides]
module = ["ultralytics.*", "cv2.*"]
ignore_missing_imports = true
